# FastFeynmanDiagrammatics

./: LICENSE  README.md  ffd.hpp
ffd/: UnitTest.cpp  UnitTest.sh  core.hpp  packages.hpp  std.hpp  tools.hpp
ffd/core/: CoreMath.hpp  FeynmanEdge.hpp  NilpotentPolynomial.hpp  QF.hpp  QFSum.hpp  QField.hpp  QuantumField.hpp  QuantumFieldGraph.hpp  QuantumFieldPair.hpp  QuantumFieldProduct_Dot.hpp  QuantumFieldSum.hpp  QuantumFieldVertex.hpp  RankedZetaTransform.hpp  TruncatedPolynomial.hpp  TypeTraits.hpp  UnitTest.hpp  WickFunction.hpp  WickMatrix.hpp  assert_flags.hpp  include.hpp  nilpotent_polynomial_s.hpp  phys.hpp  user_space_operations.hpp
ffd/examples/SquareTriangular1PIC/: CMakeLists.txt  README.md  constants.hpp  main.cpp  parameters.hpp
ffd/examples/SquareTriangular1PIC/misc/: fix_density.cpp  plot.py  prepare_data_self.cpp  simple_plot.py
ffd/examples/SquareTriangular1PIC/misc/benchmark/: density_up_B2_triang.txt  wei_sigma_node.txt
ffd/examples/SquareTriangular1PIC/parameters/: Ly  t_hopping
ffd/examples/SquareTriangular1PIC/store/: n0_wei_point
ffd/postprocessing/: mergeruns_fix_density.cpp
ffd/tools/: AccumulatorMarkovChain.hpp  AnalyticalDerivative.hpp  BinaryAccumulator.hpp  BinnedStatistics.hpp  BlockingMethod.hpp  CartesianProduct.hpp  CartesianProductArray.hpp  Chebyshev2DFFT.hpp  ChebyshevFFT.hpp  ChebyshevPolynomial.hpp  ChebyshevPolynomial2D.hpp  Chebyshev_f.hpp  Combination.hpp  ComplexConjugate.hpp  ComplexZeros.hpp  ConformalMappings.hpp  ContourDerivative.hpp  Convolution.hpp  Determinant.hpp  (+53 more)
unittest/: CMakeLists.txt
(+1313 files in other folders)
