cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/main.cpp)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/parameters DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/parameters)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/parameters.hpp DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/parameters.hpp)
add_compile_definitions(NDEBUG)
add_compile_options(-O3 -march=native)
project(SquareTriangular1PIC)
include_directories("${CMAKE_SOURCE_DIR}/../../..")
include_directories("${CMAKE_SOURCE_DIR}")
add_executable(main.x main.cpp)
